# pyusd-stellar-simple-splitter

./: .env.example  .gitignore  README.md  justfile
.github/workflows/: ci.yml  deploy-frontend.yml
contracts/simple-splitter/: Cargo.toml
contracts/simple-splitter-factory/: Cargo.toml
contracts/simple-splitter-factory/src/: lib.rs  test.rs
contracts/simple-splitter/src/: lib.rs  test.rs
frontend/: .env  .env.example  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  config.ts
frontend/src/components/: CreateSplitter.tsx  Footer.tsx  Header.tsx  ViewSplitter.tsx
frontend/src/contexts/: WalletProvider.tsx  wallet-context.ts
frontend/src/lib/: contracts.ts
