[package]
name = "simple-splitter-factory"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
simple-splitter = { path = "../simple-splitter" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }